--- a/01_intro_to_docker/Dockerfile
+++ b/01_intro_to_docker/Dockerfile
@@ -5,14 +5,15 @@
 #docker run -it python:3.9.1 bash (run the container with bash terminal)
 FROM python:3.9.1
 
-RUN pip install pandas
+RUN apt-get install wget
+RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 #send to this directory and files contained in this directory when docker build is run
-WORKDIR /app
+WORKDIR /app 
 
 #Copy sourcefile destinationfile
-COPY pipeline.py pipeline.py
+COPY ingest-data.py ingest-data.py
 
 #the terminal that container starts
 #docker run -it test:pandas(name of image) [everything here is the args] 
-ENTRYPOINT [ "python", "pipeline.py" ]
+ENTRYPOINT [ "python", "ingest-data.py" ]
