updated to test image

--- a/01_intro_to_docker/homework/Dockerfile
+++ b/01_intro_to_docker/homework/Dockerfile
@@ -1,4 +1,4 @@
-#docker build -t test:pandas . (can be any) (build the image)
+#docker build -t test:homework . (name_1:name_2) (build the image)
 #docker run -it test:pandas(name of image) [everything here is the args]
 
 FROM python:3.9
